@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - seqchksum_comparator to cope with higher plexing (with a chdir)
+
 release 48.3
  - get informatrion about a spike directly from lims
  - use old bam_alignment.pl, not P4, if omission of alignments requested
